<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="5dp"
    android:background="#FFFFFF"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/Office"
        android:layout_width="372dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/office"
        android:textAlignment="gravity"
        android:textColor="#673AB7"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/Party"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="162dp"
        android:layout_height="38dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textAlignment="textEnd"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/Party"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/Party"
        android:layout_width="136dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/party"
        android:textAlignment="textStart"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/seperator"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        app:srcCompat="@drawable/seperator" />

</androidx.constraintlayout.widget.ConstraintLayout>